# esotericWebb

./: .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  EVOLUTION_GAPS.md  LICENSE-ORC  Makefile  README.md  dag_viewer.html  dag_viewer_3d.html  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml
config/: primal_launch_profiles.toml
content/: README.md  meta.yaml  narrative.yaml
content/abilities/: break_ward.yaml  commune_with_object.yaml  compel_truth.yaml  empathic_bridge.yaml  invoke_pattern.yaml  read_aura.yaml  reconstruct_memory.yaml  sense_deception.yaml
content/demos/: guided_tour.yaml
content/npcs/: aldric.yaml  detective.yaml  elara.yaml  ghost.yaml  maren.yaml  tobias.yaml
content/scenes/: backroom.yaml  ending_complicity.yaml  ending_justice.yaml  ending_mercy.yaml  ending_transcendence.yaml  entrance.yaml  library.yaml  parlor.yaml  ritual_chamber.yaml  study.yaml  vault.yaml
deploy/: esotericwebb.toml  launch_interactive.sh
docs/: DEGRADATION_BEHAVIOR.md
experiments/: README.md
experiments/exp001_narrative_reachability/: Cargo.toml
experiments/exp001_narrative_reachability/src/: main.rs
experiments/exp002_composition_wiring/: Cargo.toml
experiments/exp002_composition_wiring/src/: main.rs
experiments/exp003_state_emergence/: Cargo.toml
experiments/exp004_provenance_trio_tcp/: Cargo.toml
experiments/exp004_provenance_trio_tcp/src/: main.rs
experiments/exp005_autoplay_coverage/: Cargo.toml
experiments/exp005_autoplay_coverage/src/: main.rs
experiments/exp006_live_composition/: Cargo.toml
graphs/: esotericwebb_full.toml  webb_ai_viz.toml  webb_full.toml  webb_live_interactive.toml  webb_nest.toml  webb_node.toml  webb_provenance.toml  webb_provenance_trio.toml  webb_tower.toml
niches/: esoteric-webb.yaml  esotericwebb-game.yaml
specs/: BOUNDED_INFINITE_ARCHITECTURE.md  CONTENT_AUTHORING_SPEC.md  CREATOR_PROFILES_AND_SYSTEM_DESIGN.md  ESOTERIC_WEBB_DESIGN.md  PAPER_REVIEW_QUEUE.md  PLASMIBIN_DISTRIBUTION.md  VISION_AND_EVOLUTION.md
wateringHole/: README.md
wateringHole/handoffs/: ESOTERICWEBB_DEPLOY_UNBLOCK_AAR_JUL18_2026.md  ESOTERICWEBB_V10_WAVE46_ABSORPTION_HANDOFF_MAY23_2026.md  ESOTERICWEBB_V11_WAVE67_POLISH_HANDOFF_JUN01_2026.md  ESOTERICWEBB_V12_WAVE74_ZERO_DEBT_HANDOFF_JUN03_2026.md  ESOTERICWEBB_V13_WAVE75_METRICS_HANDOFF_JUN03_2026.md  ESOTERICWEBB_V14_WAVE107_INTROSPECTION_HANDOFF_JUN10_2026.md  ESOTERICWEBB_V15_DEEP_DEBT_EVOLUTION_HANDOFF_JUL17_2026.md  ESOTERICWEBB_V16_LIVE_COMPOSITION_AAR_HANDOFF_JUL17_2026.md  ESOTERICWEBB_V21_LIVE_VISUAL_AAR_JUL18_2026.md  ESOTERICWEBB_V22_SCENE_BINDING_AAR_JUL18_2026.md  ESOTERICWEBB_V3_ECOSYSTEM_ABSORPTION_HANDOFF_MAR24_2026.md  ESOTERICWEBB_V4_ECOSYSTEM_REVIEW_ABSORPTION_HANDOFF_MAR24_2026.md  ESOTERICWEBB_V4_LIVE_PRIMAL_COMPOSITION_HANDOFF_MAR24_2026.md  ESOTERICWEBB_V51_AUDIT_EVOLUTION_HANDOFF_MAR29_2026.md  ESOTERICWEBB_V6_PRIMAL_CAPABILITY_GAPS_HANDOFF_MAR29_2026.md  ESOTERICWEBB_V7_COMPOSITION_PATTERNS_HANDOFF_APR17_2026.md  ESOTERICWEBB_V8_SIGNAL_ADOPTION_HANDOFF_MAY16_2026.md  ESOTERICWEBB_V9_WAVE20_ABSORPTION_HANDOFF_MAY17_2026.md  ESOTERICWEBB_WAVE150O_RESTART_AAR_JUL20_2026.md
webb/: Cargo.toml  capability_registry.toml
webb/src/: autoplay.rs  env_keys.rs  error.rs  experiment.rs  lib.rs  niche.rs  session.rs
webb/src/content/: mod.rs  tests.rs  types.rs
webb/src/director/: mod.rs
webb/src/ipc/: bridge.rs  client.rs  client_http.rs  discovery.rs  discovery_paths.rs  envelope.rs  launcher.rs  launcher_tests.rs  listener.rs  ludospring.rs  mod.rs  petaltongue.rs  primal_names.rs  provenance.rs  resilience.rs  server.rs  squirrel.rs  transport.rs
webb/src/ipc/bridge/: domains.rs  mod.rs
webb/src/ipc/handlers/: introspection.rs  lifecycle.rs  mcp.rs  mod.rs  narrative.rs  session.rs
webb/src/narrative/: effect.rs  mod.rs  predicate.rs  validator.rs  visualization.rs
webb/src/science/: dda.rs  engagement.rs  flow.rs  mod.rs  voice.rs
webb/src/session/: enrichment.rs  mod.rs  tests.rs  types.rs
webb/src/state/: mod.rs
webb/static/: index.html
webb/tests/: e2e_ipc.rs  validation_experiments.rs
whitePaper/baseCamp/: ESOTERICWEBB_V11_EVOLUTION_AND_PATTERNS.md  (+7 more)
(+2 files in other folders)
