# SPDX-License-Identifier: AGPL-3.0-or-later
[package]
name = "esotericwebb-exp002"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "exp002_composition_wiring"
path = "src/main.rs"

[dependencies]
esoteric-webb = { path = "../../webb" }
serde_json = { workspace = true }

[lints]
workspace = true
